--- a/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.html
+++ b/src/app/main/pages/evaluations/evaluations-settings/evaluations-settings.component.html
@@ -1,6 +1,7 @@
 <div class="container-settings">
     <mat-accordion>
-        <mat-expansion-panel class="container-settings__color-expantion">
+        <mat-expansion-panel class="container-settings__color-expantion"
+            *ngIf="authService.uiConfig.preEvaluations.tabs.configurations.panel.notifications">
             <mat-expansion-panel-header style="height: 58px;">
                 <mat-panel-title class="container-settings__header-title">
                     Envío de Notificaciones
@@ -82,7 +83,7 @@
                         </table>
                         <mat-paginator #settingsPaginator [pageSizeOptions]="[20,30,40]"></mat-paginator>
                     </div>
-                   <!--  <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 10px;">
+                    <!--  <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 10px;">
                         <mat-card-header>
                             <mat-card-title>
                                 <span>
@@ -134,7 +135,8 @@
             </mat-card>
         </mat-expansion-panel>
         <div style="margin-top: 30px;"></div>
-        <mat-expansion-panel class="container-settings__color-expantion" (opened)="panelOpenState = true"
+        <mat-expansion-panel class="container-settings__color-expantion"
+            *ngIf="authService.uiConfig.preEvaluations.tabs.configurations.panel.lists" (opened)="panelOpenState = true"
             (closed)="panelOpenState = false">
             <mat-expansion-panel-header style="height: 58px;">
                 <mat-panel-title class="container-settings__header-title">
@@ -209,13 +211,15 @@
                             </mat-card-header>
                         </mat-card>
                         <mat-card class="mat-elevation-z0 container-expansion1__content-card">
-                            <mat-progress-bar mode="indeterminate" *ngIf="loadingKindOfTest$ | async"></mat-progress-bar>
+                            <mat-progress-bar mode="indeterminate" *ngIf="loadingKindOfTest$ | async">
+                            </mat-progress-bar>
                             <mat-card-header class="container-expansion1__content-card--header">
                                 <mat-form-field>
                                     <mat-label>Escribir</mat-label>
                                     <input type="text" matInput placeholder="Escribir"
-                                        [formControl]="listKindOfTestFormControl" (keyup.enter)="addDeleteListKindOfTest('add')"
-                                        [errorStateMatcher]="matcher" autocomplete="off">
+                                        [formControl]="listKindOfTestFormControl"
+                                        (keyup.enter)="addDeleteListKindOfTest('add')" [errorStateMatcher]="matcher"
+                                        autocomplete="off">
                                     <button mat-button *ngIf="listKindOfTestFormControl.value" matSuffix mat-icon-button
                                         aria-label="clearResult" (click)="listKindOfTestFormControl.reset()">
                                         <mat-icon>close</mat-icon>
@@ -245,81 +249,85 @@
             </div>
 
         </mat-expansion-panel>
-
         <div style="margin-top: 30px;"></div>
+        <mat-expansion-panel class="container-settings__color-expantion" (opened)="panelOpenState = true"
+            (closed)="panelOpenState = false"
+            *ngIf="authService.uiConfig.preEvaluations.tabs.configurations.panel.broadcast">
+            <mat-expansion-panel-header style="height: 58px;">
+                <mat-panel-title class="container-settings__header-title">
+                    Envío de correos
+                </mat-panel-title>
 
-        <mat-expansion-panel class="container-settings__color-expantion" 
-            (opened)="panelOpenState = true"  (closed)="panelOpenState = false">
-                <mat-expansion-panel-header style="height: 58px;">
-                    <mat-panel-title class="container-settings__header-title">
-                        Envío de correos
-                    </mat-panel-title>
-                   
-                </mat-expansion-panel-header>
-                <div style="border: 10px;"></div>
-    
-                <mat-card class="mat-elevation-z0">
-                    <div class="container-diffusion"*ngIf="broadcast$ |async as broadcastList">
-                        <div *ngFor="let broadcast of broadcastList; let i=index">
-                            <mat-card-content>
-                                <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 5px;">
-                                    <mat-card-header>
-                                        <mat-card-title > 
-                                            <div class="container-diffusion__title" >
-                                                 <p class="container-diffusion__title--name"> Lista de {{broadcast.name}} </p>                                            
-                                                <button mat-icon-button aria-label="deletelistResult" class="container-diffusion__btn"
-                                                (click)="deleteListBroadcast(broadcast,i)" >
-                                                    <mat-icon style="color: #FF2D2D; ">delete</mat-icon>
-                                                </button>
-                                            </div>                                        
-                                        </mat-card-title>
-                                    </mat-card-header>
-                                </mat-card>
-                                
-                                <mat-card class="mat-elevation-z0 container-expansion1__content-card">
-                                    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
-                                    <mat-card-header class="container-expansion1__content-card--header">
-    
-                                        <mat-form-field>
-                                            <mat-label>Escribir</mat-label>
-                                            <input type="email" matInput placeholder="Escribir" [formControl]="broadcastFormArray.controls[i]" 
-                                            (keyup.enter)="addListDiffusion(broadcast,i)"  [errorStateMatcher]="matcher" autocomplete="off">
-                                            <button mat-button *ngIf="broadcastFormArray.controls[i].errors" matSuffix mat-icon-button aria-label="clearResult" 
-                                            (click)="broadcastFormArray.controls[i].reset()">
-                                                <mat-icon>close</mat-icon>
+            </mat-expansion-panel-header>
+            <div style="border: 10px;"></div>
+
+            <mat-card class="mat-elevation-z0">
+                <div class="container-diffusion" *ngIf="broadcast$ |async as broadcastList">
+                    <div *ngFor="let broadcast of broadcastList; let i=index">
+                        <mat-card-content>
+                            <mat-card class="mat-elevation-z0" style="margin-left: -10px;margin-top: 5px;">
+                                <mat-card-header>
+                                    <mat-card-title>
+                                        <div class="container-diffusion__title">
+                                            <p class="container-diffusion__title--name"> Lista de {{broadcast.name}}
+                                            </p>
+                                            <button mat-icon-button aria-label="deletelistResult"
+                                                class="container-diffusion__btn"
+                                                (click)="deleteListBroadcast(broadcast,i)">
+                                                <mat-icon style="color: #FF2D2D; ">delete</mat-icon>
                                             </button>
-                                            <mat-hint>Presione ENTER para agregar</mat-hint>
-                                            <mat-error *ngIf="broadcastFormArray.controls[i].hasError('required')">
-                                                El campo es <strong>Requerido</strong>
-                                            </mat-error>
-                                        </mat-form-field>
-    
-                                    </mat-card-header>
-                                    <mat-card-content class="container-expansion1__content-card-content">
-                                        <div role="list" *ngFor="let item of broadcast['emailList'] ;let j=index">
-                                            <div class="item-list">
-                                                <span>{{item}}</span>
-                                                <span>
-                                                    <button mat-icon-button aria-label="deletelistResult" 
-                                                    (click)="updateBrocastListEmail(broadcast, item)" >
-                                                        <mat-icon style="color: #828282">delete</mat-icon>
-                                                    </button>
-                                                </span>
-                                            </div>
                                         </div>
-                                    </mat-card-content>
-                                </mat-card>                
-                            </mat-card-content>                       
-                        </div>
+                                    </mat-card-title>
+                                </mat-card-header>
+                            </mat-card>
+
+                            <mat-card class="mat-elevation-z0 container-expansion1__content-card">
+                                <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+                                <mat-card-header class="container-expansion1__content-card--header">
+
+                                    <mat-form-field>
+                                        <mat-label>Escribir</mat-label>
+                                        <input type="email" matInput placeholder="Escribir"
+                                            [formControl]="broadcastFormArray.controls[i]"
+                                            (keyup.enter)="addListDiffusion(broadcast,i)" [errorStateMatcher]="matcher"
+                                            autocomplete="off">
+                                        <button mat-button *ngIf="broadcastFormArray.controls[i].errors" matSuffix
+                                            mat-icon-button aria-label="clearResult"
+                                            (click)="broadcastFormArray.controls[i].reset()">
+                                            <mat-icon>close</mat-icon>
+                                        </button>
+                                        <mat-hint>Presione ENTER para agregar</mat-hint>
+                                        <mat-error *ngIf="broadcastFormArray.controls[i].hasError('required')">
+                                            El campo es <strong>Requerido</strong>
+                                        </mat-error>
+                                    </mat-form-field>
+
+                                </mat-card-header>
+                                <mat-card-content class="container-expansion1__content-card-content">
+                                    <div role="list" *ngFor="let item of broadcast['emailList'] ;let j=index">
+                                        <div class="item-list">
+                                            <span>{{item}}</span>
+                                            <span>
+                                                <button mat-icon-button aria-label="deletelistResult"
+                                                    (click)="updateBrocastListEmail(broadcast, item)">
+                                                    <mat-icon style="color: #828282">delete</mat-icon>
+                                                </button>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </mat-card-content>
+                            </mat-card>
+                        </mat-card-content>
                     </div>
-                    
-                    <button type="button" aria-label="saveDataDifusion" mat-button class="container-settings__btn-add" style="margin-top: 50px;"
-                     (click)="addBroadcast()">
-                        AGREGAR
-                    </button>          
-    
-                </mat-card>           
-    
+                </div>
+
+                <button type="button" aria-label="saveDataDifusion" mat-button class="container-settings__btn-add"
+                    style="margin-top: 50px;" (click)="addBroadcast()">
+                    AGREGAR
+                </button>
+
+            </mat-card>
+
         </mat-expansion-panel>
     </mat-accordion>
 </div>
