--- a/src/app/main/pages/initial-evaluations/init-eval-reports/init-eval-reports.component.html
+++ b/src/app/main/pages/initial-evaluations/init-eval-reports/init-eval-reports.component.html
@@ -8,7 +8,8 @@
             <mat-icon>add</mat-icon>
             <span>GENERAR RECEPCIÓN</span>
         </button>
-        <mat-form-field appearance="outline" class="ms-toolbar__search" [ngClass]="isMobile ? 'ms-toolbar__search--mobile' : 'ms-toolbar__search--desktop'">
+        <mat-form-field appearance="outline" class="ms-toolbar__input"
+            [ngClass]="isMobile ? 'ms-toolbar__input--mobile' : 'ms-toolbar__input--desktop'">
             <mat-label>Buscar</mat-label>
             <mat-icon matPrefix>search</mat-icon>
             <input matInput type="text" [formControl]="searchControl" placeholder="Buscar OT" autocomplete="off">
@@ -100,10 +101,8 @@
         </mat-paginator>
     </ng-container>
     <ng-template #default>
-        <div class="ms-table-default">
-            <span>
-                <mat-icon style="vertical-align: middle;">air</mat-icon> Sin resultados
-            </span>
+        <div class="ms-default">
+            <mat-progress-bar mode="indeterminate"></mat-progress-bar>
         </div>
     </ng-template>
 </div>
