--- a/src/app/main/pages/admin/admin.component.html
+++ b/src/app/main/pages/admin/admin.component.html
@@ -13,12 +13,13 @@
     </div>
     <mat-divider></mat-divider>
 
-    <div *ngIf="users$ |async as users; else default" class="body-container mat-elevation-z4">
+    <div *ngIf="users$ |async; else default" class="body-container mat-elevation-z4">
         <table mat-table [dataSource]="usersDataSource" matSort (matSortChange)="sortData($event)">
 
             <ng-container matColumnDef="createdAt">
                 <th mat-header-cell *matHeaderCellDef class="ms-table__header" mat-sort-header> Fecha de creación </th>
-                <td mat-cell *matCellDef="let element" class="ms-table__header"> {{(element.createdAt ? (element.createdAt.seconds * 1000) : '---') |
+                <td mat-cell *matCellDef="let element" class="ms-table__header"> {{(element.createdAt ?
+                    (element.createdAt.seconds * 1000) : '---') |
                     date : 'dd/MM/yy'}} </td>
             </ng-container>
 
