--- a/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
+++ b/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
@@ -115,7 +115,9 @@
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
-              element.fechaAperturaChild ? element.fechaAperturaChild : "---"
+              element.fechaAperturaChild
+                ? (element.fechaAperturaChild | date: "d/M/y")
+                : "---"
             }}
           </td>
         </ng-container>
@@ -127,7 +129,7 @@
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
               element.fechaReleasedIoChild
-                ? element.fechaReleasedIoChild
+                ? (element.fechaReleasedIoChild | date: "d/M/y")
                 : "---"
             }}
           </td>
@@ -214,7 +216,9 @@
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
-              element.fechaUltimoListado ? element.fechaUltimoListado : "---"
+              element.fechaUltimoListado
+                ? (element.fechaUltimoListado | date: "d/M/y")
+                : "---"
             }}
           </td>
         </ng-container>
@@ -226,7 +230,7 @@
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
               element.fechaUltimoEnvioDocumentoADM
-                ? element.fechaUltimoEnvioDocumentoADM
+                ? (element.fechaUltimoEnvioDocumentoADM | date: "d/M/y")
                 : "---"
             }}
           </td>
@@ -248,7 +252,7 @@
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
               element.fechaDefinicionDeCargos
-                ? element.fechaDefinicionDeCargos
+                ? (element.fechaDefinicionDeCargos | date: "d/M/y")
                 : "---"
             }}
           </td>
@@ -270,7 +274,7 @@
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
               element.fechaUltimoEnvioPPTO
-                ? element.fechaUltimoEnvioPPTO
+                ? (element.fechaUltimoEnvioPPTO | date: "d/M/y")
                 : "---"
             }}
           </td>
@@ -281,7 +285,11 @@
             FECHA ENVIO PPTO 01
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
-            {{ element.fechaEnvioPPTO01 ? element.fechaEnvioPPTO01 : "---" }}
+            {{
+              element.fechaEnvioPPTO01
+                ? (element.fechaEnvioPPTO01 | date: "d/M/y")
+                : "---"
+            }}
           </td>
         </ng-container>
 
@@ -290,7 +298,11 @@
             FECHA ENVIO PPTO 02
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
-            {{ element.fechaEnvioPPTO02 ? element.fechaEnvioPPTO02 : "---" }}
+            {{
+              element.fechaEnvioPPTO02
+                ? (element.fechaEnvioPPTO02 | date: "d/M/y")
+                : "---"
+            }}
           </td>
         </ng-container>
 
@@ -325,7 +337,11 @@
             FECHA ENVIO PPTO 03
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
-            {{ element.fechaEnvioPPTO03 ? element.fechaEnvioPPTO03 : "---" }}
+            {{
+              element.fechaEnvioPPTO03
+                ? (element.fechaEnvioPPTO03 | date: "d/M/y")
+                : "---"
+            }}
           </td>
         </ng-container>
 
@@ -360,7 +376,11 @@
             FECHA ENVIO PPTO 04
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
-            {{ element.fechaEnvioPPTO04 ? element.fechaEnvioPPTO04 : "---" }}
+            {{
+              element.fechaEnvioPPTO04
+                ? (element.fechaEnvioPPTO04 | date: "d/M/y")
+                : "---"
+            }}
           </td>
         </ng-container>
 
@@ -397,7 +417,7 @@
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
               element.fechaDeAprobacionORechazo
-                ? element.fechaDeAprobacionORechazo
+                ? (element.fechaDeAprobacionORechazo | date: "d/M/y")
                 : "---"
             }}
           </td>
@@ -603,7 +623,9 @@
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
-              element.fechaDeTerminoDeRep ? element.fechaDeTerminoDeRep : "---"
+              element.fechaDeTerminoDeRep
+                ? (element.fechaDeTerminoDeRep | date: "d/M/y")
+                : "---"
             }}
           </td>
         </ng-container>
@@ -613,7 +635,11 @@
             FECHA ULTIMO INPUT
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
-            {{ element.fechaUltimoInput ? element.fechaUltimoInput : "---" }}
+            {{
+              element.fechaUltimoInput
+                ? (element.fechaUltimoInput | date: "d/M/y")
+                : "---"
+            }}
           </td>
         </ng-container>
 
@@ -632,7 +658,9 @@
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
-              element.fechaDeFactDeTaller ? element.fechaDeFactDeTaller : "---"
+              element.fechaDeFactDeTaller
+                ? (element.fechaDeFactDeTaller | date: "d/M/y")
+                : "---"
             }}
           </td>
         </ng-container>
@@ -790,7 +818,11 @@
             MES FACT VENTA
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
-            {{ element.mesFactVenta ? element.mesFactVenta : "---" }}
+            {{
+              element.mesFactVenta
+                ? (element.mesFactVenta | date: "d/M/y")
+                : "---"
+            }}
           </td>
         </ng-container>
 
@@ -812,7 +844,11 @@
             FECHA FIRST LABOUR
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
-            {{ element.fechaFirstLabour ? element.fechaFirstLabour : "---" }}
+            {{
+              element.fechaFirstLabour
+                ? (element.fechaFirstLabour | date: "d/M/y")
+                : "---"
+            }}
           </td>
         </ng-container>
 
@@ -821,7 +857,11 @@
             FECHA LAST LABOUR
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
-            {{ element.fechaLastLabour ? element.fechaLastLabour : "---" }}
+            {{
+              element.fechaLastLabour
+                ? (element.fechaLastLabour | date: "d/M/y")
+                : "---"
+            }}
           </td>
         </ng-container>
 
@@ -986,7 +1026,7 @@
             FECHA LPD
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
-            {{ element.fechaLPD ? element.fechaLPD : "---" }}
+            {{ element.fechaLPD ? (element.fechaLPD | date: "d/M/y") : "---" }}
           </td>
         </ng-container>
 
@@ -1040,6 +1080,7 @@
       mat-button
       class="footer__btn-close"
       mat-dialog-close
+      (click)="cancelUploadDataToFirestore()"
       [disabled]="!budgetsDailyEntriesDataSource.data.length"
     >
       Cerrar
